--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://dverybest.github.io/Best-Headlines",
   "name": "newsheadlines",
   "version": "0.1.0",
   "private": true,
